// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing generate region select Region select has multiple regions 1`] = `
<select
  id="region"
  name="regionID"
  placeholder="select region"
>
  <option
    value="000000000000000000000004"
  >
    Name3
  </option>
  <option
    value="000000000000000000000006"
  >
    Name5
  </option>
  <option
    value="000000000000000000000008"
  >
    Name7
  </option>
</select>
`;

exports[`testing generate region select Region select has one region 1`] = `
<select
  id="region"
  name="regionID"
  placeholder="select region"
>
  <option
    value="000000000000000000000002"
  >
    Name1
  </option>
</select>
`;

exports[`testing generate region select Region select is empty with no regions 1`] = `
<select
  id="region"
  name="regionID"
  placeholder="select region"
/>
`;
